31-05-2017 добавлен файл конфигурации

--- a/Conversion from binary to csv/Generator  binary files/App.config
+++ b/Conversion from binary to csv/Generator  binary files/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Generator__binary_files.Path" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="Generator__binary_files.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <Generator__binary_files.Path>
+            <setting name="path_" serializeAs="String">
+                <value>D:\\Trade.dat</value>
+            </setting>
+        </Generator__binary_files.Path>
+        <Generator__binary_files.Settings1>
+            <setting name="path_" serializeAs="String">
+                <value>D:\\Trade.dat</value>
+            </setting>
+            <setting name="numberLines" serializeAs="String">
+                <value>2500</value>
+            </setting>
+        </Generator__binary_files.Settings1>
+    </userSettings>
 </configuration>
