--- a/Conversion from binary to csv/Generator  binary files/Generator  binary files.csproj
+++ b/Conversion from binary to csv/Generator  binary files/Generator  binary files.csproj
@@ -46,9 +46,19 @@
     <Compile Include="RandomString.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Path.cs" />
+    <Compile Include="Path.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Path.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Path.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Path.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Converter from binary to csv\Converter from binary to csv.csproj">
