--- a/Conversion from binary to csv/Converter from binary to csv/App.config
+++ b/Conversion from binary to csv/Converter from binary to csv/App.config
@@ -1,6 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Converter_from_binary_to_csv.Path" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        </sectionGroup>
+    </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
     </startup>
+    <userSettings>
+        <Converter_from_binary_to_csv.Path>
+            <setting name="path_dat" serializeAs="String">
+                <value>D:\\Trade.dat</value>
+            </setting>
+            <setting name="path_csv" serializeAs="String">
+                <value>D:\\Trade.csv</value>
+            </setting>
+        </Converter_from_binary_to_csv.Path>
+    </userSettings>
 </configuration>
