--- a/Conversion from binary to csv/Converter from binary to csv/App.config
+++ b/Conversion from binary to csv/Converter from binary to csv/App.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
     <userSettings>
         <Converter_from_binary_to_csv.Path>
