--- a/Conversion from binary to csv/Generator  binary files/App.config
+++ b/Conversion from binary to csv/Generator  binary files/App.config
@@ -7,7 +7,7 @@
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
     <userSettings>
         <Generator__binary_files.Path>
